--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/tuckerpikula/Note-Taker/issues"
   },
-  "homepage": "https://github.com/tuckerpikula/Note-Taker#readme"
+  "homepage": "https://github.com/tuckerpikula/Note-Taker#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
